i think finally fixing the spacing issue of the footer

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,7 +1,7 @@
 footer {
   bottom: 0;
-  height: 3.75rem;
   width: 100%;
+  box-sizing: border-box;
   background-color: #faa549ff;;
   margin-top: 10px;
   color: white;
